Transfer Weights: Source Layers can't be set to Active Layer #55956

Closed
opened 2018-07-12 21:29:42 +02:00 by Yevgeny Makarov · 5 comments

Blender Version
Broken: 2.79b, 2.79-b843753

Exact steps for others to reproduce the error
Perform the "Transfer Weights" in the Weight Paint mode.
After you change the "Source Layers" option to "By Name" or "By Order",
you can't go back to the "Active Layer", it disappears.

**Blender Version** Broken: 2.79b, 2.79-b843753 **Exact steps for others to reproduce the error** Perform the "Transfer Weights" in the Weight Paint mode. After you change the "Source Layers" option to "By Name" or "By Order", you can't go back to the "Active Layer", it disappears.
Author
Member

Added subscriber: @jenkm

Added subscriber: @jenkm
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Bastien Montagne was assigned by Philipp Oeser 2018-07-13 13:57:22 +02:00
Member

see also #45991.
Finding the logic of "reverse_transfer" a bit confusing here:

  • tooltip is confusing then ["from active to selected" is wrong... I know it's a generic operator but still...]
  • we cant select a source group (its reversed now -- for the generic operator you cant select a destination group since we may transfer to several objects at once, which makes sense, but...)
  • looks like the enums are also mixed up ( By Name [DT_LAYERS_NAME_DST] will act as All Layers [DT_LAYERS_ALL_SRC], choosing By Order wont have an effect cause there is no equivalent in the 'reversed' enum... )

assigning to @mont29, my intution would be to remove reverse logic and have it transfer from active to selected for Transfer Weights as well, but letting mont29 decide...

see also #45991. Finding the logic of "reverse_transfer" a bit confusing here: - tooltip is confusing then ["from active to selected" is wrong... I know it's a **generic** operator but still...] - we cant select a source group (its reversed now -- for the generic operator you cant select a destination group since we may transfer to several objects at once, which makes sense, but...) - looks like the enums are also mixed up ( `By Name` [DT_LAYERS_NAME_DST] will act as `All Layers` [DT_LAYERS_ALL_SRC], choosing `By Order` wont have an effect cause there is no equivalent in the 'reversed' enum... ) assigning to @mont29, my intution would be to remove reverse logic and have it transfer from active to selected for Transfer Weights as well, but letting mont29 decide...

This issue was referenced by 52d5d53b5e

This issue was referenced by 52d5d53b5e3676743a7cca734fa6f0137e19e7d3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55956
No description provided.